# LedPi

./: CMakeLists.txt  build.sh  run.sh
src/: color.c  color.h  coords.c  coords.h  leds.c  leds.h  main.c  random.c  random.h  vector.c  vector.h  version.h.in
src/effects/: 3d_visor.c  blink.c  effect.h  effect_template.c  fire.c  no_effect.c  rainbow.c  rainbow_vertical.c  snake.c  snow.c  spiral.c  static_color.c  visor.c
